--- a/404.html
+++ b/404.html
@@ -71,7 +71,7 @@
       Oops, Page not found!!!
     </div>
     <div class="btn-container">
-      <a class="btn" id="back" href="https://colyn.surge.sh/">
+      <a class="btn" id="back" href="/">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" style="margin-right: 8px;">
           <path fill="none" d="M0 0h24v24H0z"/>
           <path d="M5.828 7l2.536 2.536L6.95 10.95 2 6l4.95-4.95 1.414 1.414L5.828 5H13a8 8 0 1 1 0 16H4v-2h9a6 6 0 1 0 0-12H5.828z"/>
@@ -81,7 +81,7 @@
     </div>
   </div>
   <footer class="footer">
-    Copyright&copy;<span id="year"></span> <a href="https://colyn.surge.sh/" target="_blank">Colyn</a>
+    Copyright&copy;<span id="year"></span> <a href="/" target="_blank">Colyn</a>
   </footer>
   <script>
     var back = document.getElementById('back')
