--- a/intro.html
+++ b/intro.html
@@ -105,7 +105,7 @@
                                         <b><b>关于该平台的使用教程：</b></b>
                                     <ul>
                                         <li>
-                                            因为该平台托管在国外一家CDN服务器上，因此国内访问较慢。初次访问请耐心等待，可能需要2-4秒才能加载出来。本网站原则上永久存在，除非一切不可抗拒的因素关停。
+                                            在使用该平台时应避免高峰期，以免视频无法解析。若遇到视频解析失败或者加载不出来，很有可能是因为当用户太多导致，可以稍后再试。
                                         </li>
                                         <li>
                                             <span
