--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <a class="btn btn-primary mt-3" href="intro.html" style="width: 100%; margin: 0 auto;" rel="nofollow"
                   target="_blank">点我阅读使用教程</a>
                 <iframe id="vip_player"
-                  src="https://jx.bozrc.com:4433/player/?url=https://www.iqiyi.com/w_19s78nyno9.html" scrolling="no"
+                  src="https://www.bilibili.com/video/BV15s411H7Wz" scrolling="no"
                   frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="350％"></iframe><br />
                 <div class="input-group m-2">
                   <input type="text" id="video_url" class="form-control" placeholder="输入播放地址，请阅读使用教程"
