--- a/index.html
+++ b/index.html
@@ -1,142 +1,85 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Colyn|VIP&付费视频云解析</title>
-  <!-- Favicon -->
-  <link rel="icon" href="./assets/img/r.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/css/argon.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/bootstrap_docs.css">
-  <link rel="stylesheet" href="./assets/css/vs.min.css">
-  <script src="./assets/js/jquery.min.js"></script>
-  <script src="./assets/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets/js/uplayer.min.js"></script>
-  <script src="./assets/js/highlight.min.js"></script>
-  <script src="./assets/vendor/jquery/jquery.min.js"></script>
-  <script src="./assets/vendor/popper/popper.min.js"></script>
-  <script src="./assets/vendor/bootstrap/bootstrap.min.js"></script>
-  <script src="./assets/vendor/headroom/headroom.min.js"></script>
-  <script src="./assets/js/argon.min.js"></script>
-  <script src="./assets/js/query.min.js"></script>
-  <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
-  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <title>Coly’s VIP及付费视频解析下载</title>
+    <meta charset="utf-8" />
+    <link href="/favicon.ico">
+    <link href="css/base.css" rel="stylesheet" />
+    <link href="css/public.css" rel="stylesheet" />
+    <link href="css/swiper.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/iconfont.css">
+    <link href="css/downcont.css" rel="stylesheet" />
 </head>
-
 <body>
-  <!---->
-  <main class="profile-page">
-    <section class="section-profile-cover section-shaped my-0">
-      <div>
-        <h1 style="color:#ffffff;padding-top: 3%;padding-left: 5%;font-size: 5em;">Colyn's VIP</h1>
-      </div>
-      <div>
-        <h1 style="color:#ffffff;padding-left: 5%;font-size: 2em;">全网VIP电影纯净解析</h1>
-      </div>
-      <!-- Circles background -->
-      <div class="shape shape-style-1 shape-primary alpha-4">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <!-- SVG separator -->
-      <div class="separator separator-bottom separator-skew">
-        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
-          xmlns="http://www.w3.org/2000/svg">
-          <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-        </svg>
-      </div>
-    </section>
-    <section class="section">
-      <div class="container">
-        <div class="card card-profile shadow mt--300 ">
-          <div class="px-4">
-            <div class="row justify-content-center">
-              <div class="col-lg-3 order-lg-2">
-                <div class="card-profile-image">
-                  <a href="#">
-                    <img class="rounded-bottom" />
-                  </a>
-                </div>
-              </div>
-              <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
-              </div>
-              <div class="col-lg-4 order-lg-1">
-                <div class="card-profile-stats d-flex justify-content-center">
-                  <div>
-                    <span class="heading">22+</span>
-                    <span class="description">解析线路</span>
-                  </div>
-                  <div>
-                    <span class="heading">10+</span>
-                    <span class="description">视频网站</span>
-                  </div>
-                  <div>
-                    <span class="heading">5+</span>
-                    <span class="description">全平台</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="form-group row">
+    <div class="down_head">
+        <p><span>Coly's VIP</span><span>全网VIP及付费视频解析</span></p>
+    </div>
+    <!-- Swiper -->
+    <div class="swiper-container down_pc" id="downCont">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide down_slide1">
+                <div class="slideCont">
+                    <h2 style="font-family:'Xuven';">Coly's VIP</h2>
+                    <div class="down_mes">
+                        <p style="font-family:'Qiu';"><i class="iconfont icon-xiaoshi"></i>24小时免费追剧</p>
+                        <p style="font-family:'Qiu';" style="font-family:'Qiu';" style="font-family:'Qiu';"><i class="iconfont icon-tixing"></i>全网影视高清解析</p>
+                        <p style="font-family:'Qiu';" style="font-family:'Qiu';"><i class="iconfont icon-xiansuo"></i>全网影视免会员观看</p>
+                        <p style="font-family:'Qiu';"><i class="iconfont icon-chaxun"></i>APP、PC、WAP多端解析</p>
+                    </div>
 
-              <div style="width: 660px; margin: 0 auto;">
-                <a class="btn btn-primary mt-3" href="intro.html" style="width: 100%; margin: 0 auto;" rel="nofollow"
-                  target="_blank">点我阅读使用教程</a>
-                <iframe id="vip_player"
-                  src="https://player.bilibili.com/player.html?aid=26663367&bvid=BV15s411H7Wz&cid=45864037&page=1" scrolling="no"
-                  frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="350％"></iframe><br />
-                <div class="input-group m-2">
-                  <input type="text" id="video_url" class="form-control" placeholder="输入播放地址，请阅读使用教程"
-                    aria-describedby="button-play">
-                  <button type="button" id="button-play" class="btn btn-outline-secondary"
-                    onclick="javascript:play_url()">播放</button>
+                    <div class="down_dbox">
+                        <div class="down_btns">
+                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/6059749a-f79c-4f1f-aadf-7d0fdd9fe59a.apk" ><span style="font-family:'Qiu';">Android端下载</span></button>
+                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/e2d2d772-d825-4b7e-aaca-dfca258f8927.exe" ><span style="font-family:'Qiu';">Windows端下载</span></button>
+                        </div>
+                        <div class="down_ewm">
+                            <img src="images/code.png" />                            
+                        </div>
+                    </div>
+                    <div class="down_pic">
+                        <img src="images/phone_pc_shd.png" />
+                    </div>
                 </div>
-              </div>
+
             </div>
-            <div class="mt-5 py-5 border-top text-center">
-              <div class="row justify-content-center">
-                <div class="col-sm-9">
-                  <a class="btn btn-success mt-3" href="http://www.bilibili.com/" rel="nofollow"
-                    target="_blank">BLBL视频</a>
-                  <a class="btn btn-danger mt-3" href="http://www.iqiyi.com/" rel="nofollow" target="_blank">AQY视频</a>
-                  <a class="btn btn-info mt-3" href="http://v.qq.com/" rel="nofollow" target="_blank">TX视频</a>
-                  <a class="btn btn-warning  mt-3" href="http://www.youku.com/" rel="nofollow" target="_blank">YK视频</a>
-                  <br>
-                  <div class="hr "></div>
-                  <a class="btn btn-primary mt-3" href="http://www.mgtv.com/" rel="nofollow" target="_blank">MG视频</a>
-                  <a class="btn btn-info mt-3" href="http://www.le.com/" rel="nofollow" target="_blank">LS视频</a>
-                  <a class="btn btn-primary mt-3" href="http://www.pptv.com/" rel="nofollow" target="_blank">PPTV视频</a>
-                </div>
-              </div>
-              <hr />
-              <div>手机浏览器扫描观看</div>
-              <img src="./assets/img/code.png" width="160px" height="160px">
-            </div>
-          </div>
         </div>
-      </div>
-      <div align="center" style="padding-top: 8px;">
-        <light>Copyright&copy;<span id="year"></span></light></span> <b>Colyn</b>
-        <div>
-          <script>
-            var d = new Date();
-            var x = document.getElementById("year");
-            x.innerHTML = d.getFullYear();
-          </script>
-    </section>
-  </main>
+    </div>
+    <div style="display: none;">
+        <a id="AndroidUrl"><span id="spAndroid"></span></a>
+        <a id="IosUrl" target="_blank"><span id="spIos"></span></a>
+    </div>
+  <!-- Swiper JS -->
+    <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+    <script src="js/swiper.min.js"></script>
+    <script type="text/javascript" src="js/fontsize.js" id="fontSize"></script>
+    <!-- Initialize Swiper -->
+    <script type="text/javascript" src="js/pcdownload.js"></script>
+    <script src="js/monitor.js" type="text/javascript"></script>
+     <script>    
+        $('li.dropdown').mouseover(function() {   
+            $(this).addClass('open');    
+        })
+        .mouseout(function() {        
+            $(this).removeClass('open');   
+        }); 
+        //list
+        $('.list').click(function (event)
+    	{
+        event.preventDefault();
+        $('iframe').attr("src","./list");
+    	});
+        //home
+    	$('.home').click(function (event)
+    	{
+        event.preventDefault();
+        $('iframe').attr("src","./home");
+    	});
+    	//nav
+    	$('.dh').click(function (event)
+    	{
+        event.preventDefault();
+        $('iframe').attr("src","./nav");
+    	});
+    </script>
 </body>
-
 </html>
