--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide down_slide1">
                 <div class="slideCont">
-                    <h2 style="font-family:'Xuven';">Coly's VIP</h2>
+                    <h2 style="font-family:'Xuven';">Coly's VIP内测</h2>
                     <div class="down_mes">
                         <p style="font-family:'Qiu';"><i class="iconfont icon-xiaoshi"></i>24小时免费追剧</p>
                         <p style="font-family:'Qiu';" style="font-family:'Qiu';" style="font-family:'Qiu';"><i class="iconfont icon-tixing"></i>全网影视高清解析</p>
