--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide down_slide1">
                 <div class="slideCont">
-                    <h2 style="font-family:'Xuven';">Coly's VIP内测</h2>
+                    <h2 style="font-family:'Xuven';">Coly's VIP</h2>
                     <div class="down_mes">
                         <p style="font-family:'Qiu';"><i class="iconfont icon-xiaoshi"></i>24小时免费追剧</p>
                         <p style="font-family:'Qiu';" style="font-family:'Qiu';" style="font-family:'Qiu';"><i class="iconfont icon-tixing"></i>全网影视高清解析</p>
@@ -29,8 +29,8 @@
 
                     <div class="down_dbox">
                         <div class="down_btns">
-                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/fb04d554-f6f8-4d93-ba70-9f8cec616d29.apk" ><span style="font-family:'Qiu';">Android端下载</span></button>
-                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/e100e1b5-3fff-42b9-94d9-4a0293791b40.exe" ><span style="font-family:'Qiu';">Windows端下载</span></button>
+                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/c6a3cbb4-25a2-422d-91c5-b78286a201bd.apk" ><span style="font-family:'Qiu';">Android端下载</span></button>
+                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/8dbf6274-8a21-4365-b66b-5e89d93938af.exe" ><span style="font-family:'Qiu';">Windows端下载</span></button>
                         </div>
                         <div class="down_ewm">
                             <img src="images/code.png" />                            
