--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
                     <div class="down_dbox">
                         <div class="down_btns">
-                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/c6a3cbb4-25a2-422d-91c5-b78286a201bd.apk" ><span style="font-family:'Qiu';">Android端下载</span></button>
-                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/8dbf6274-8a21-4365-b66b-5e89d93938af.exe" ><span style="font-family:'Qiu';">Windows端下载</span></button>
+                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="http://inetgeek.cn/notice.txt" ><span style="font-family:'Qiu';">Android端下载</span></button>
+                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="http://jx.inetgeek.cn/notice.txt" ><span style="font-family:'Qiu';">Windows端下载</span></button>
                         </div>
                         <div class="down_ewm">
                             <img src="images/code.png" />                            
