--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
                     <div class="down_dbox">
                         <div class="down_btns">
-                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="http://inetgeek.cn/notice.txt" ><span style="font-family:'Qiu';">Android端下载</span></button>
-                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="http://jx.inetgeek.cn/notice.txt" ><span style="font-family:'Qiu';">Windows端下载</span></button>
+                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="http://jx.inetgeek.cn/notice.html" ><span style="font-family:'Qiu';">Android端下载</span></button>
+                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="http://jx.inetgeek.cn/notice.html" ><span style="font-family:'Qiu';">Windows端下载</span></button>
                         </div>
                         <div class="down_ewm">
                             <img src="images/code.png" />                            
