--- a/notice.html
+++ b/notice.html
@@ -1,1 +1,10 @@
-程序有点小bug，待修复后可下载，不会很久，请及时关注！
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Coly’s VIP及付费视频解析下载</title>
+    <meta charset="utf-8" />
+</head>
+<body>
+<h3>程序有点小bug，待修复后可下载，不会很久，请及时关注！</h3>
+</body>
+</html>
