--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="down_dbox">
                         <div class="down_btns">
                             <button class="androidDown track "  trackname="App_Android_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/9a524b01-4271-49b4-9b25-5db9d25cdee9.apk" ><span style="font-family:'Qiu';">Android端下载</span></button>
-                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="http://jx.inetgeek.cn/notice.html" ><span style="font-family:'Qiu';">Windows端下载</span></button>
+                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/123c76b7-e278-4329-91ee-69fa9db73a13.exe" ><span style="font-family:'Qiu';">Windows端下载</span></button>
                         </div>
                         <div class="down_ewm">
                             <img src="images/code.png" />                            
