--- a/index.html
+++ b/index.html
@@ -29,8 +29,21 @@
 
                     <div class="down_dbox">
                         <div class="down_btns">
-                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/9a524b01-4271-49b4-9b25-5db9d25cdee9.apk" ><span style="font-family:'Qiu';">Android端下载</span></button>
-                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/123c76b7-e278-4329-91ee-69fa9db73a13.exe" ><span style="font-family:'Qiu';">Windows端下载</span></button>
+                            <button class="androidDown track "  trackname="App_Android_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/9a524b01-4271-49b4-9b25-5db9d25cdee9.apk" ><span style="font-family:'Qiu';">Android端</span></button>
+                            <button class="iosDown track " trackname="App_IOS_SHDApp" url="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-0a8d726d-7917-49ee-8f2d-e29678ab3b41/123c76b7-e278-4329-91ee-69fa9db73a13.exe" ><span
+                                    style="font-family:'Qiu';position: relative;left: 10px;">Windows端</span><span style="
+                                display: inline-block;
+                                padding: 0 6px;
+                                position: relative;
+                                font-size: 12px; 
+                                ont-size: inherit;
+                                top:-15px;
+                                left: 10px;
+                                text-align: center;
+                                background-color: red;
+                                color: #fff;
+                                border-radius: 10px;
+                                line-height: 20px;">NEW</span></button>
                         </div>
                         <div class="down_ewm">
                             <img src="images/code.png" />                            
