--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <div class="slideCont">
                     <h2 style="font-family:'Xuven';">Coly's VIP</h2>
                     <div class="down_mes">
-                        <p style="font-family:'Qiu';"><i class="iconfont icon-xiaoshi"></i>24小时免费追剧</p>
-                        <p style="font-family:'Qiu';" style="font-family:'Qiu';" style="font-family:'Qiu';"><i class="iconfont icon-tixing"></i>全网影视高清解析</p>
+                        <p style="font-family:'Qiu';"><i class="iconfont icon-xiaoshi"></i>本平台应用因为动了tx蛋糕被人恶意举报，现在被标记为A.gray.Searchvipvideo病毒，清者自清，Searchvipvideo的意思就是搜索VIP视频的病毒，真是笑不活了。</p>
+<!--                         <p style="font-family:'Qiu';" style="font-family:'Qiu';" style="font-family:'Qiu';"><i class="iconfont icon-tixing"></i>全网影视高清解析</p>
                         <p style="font-family:'Qiu';" style="font-family:'Qiu';"><i class="iconfont icon-xiansuo"></i>全网影视免会员观看</p>
-                        <p style="font-family:'Qiu';"><i class="iconfont icon-chaxun"></i>APP、PC、WAP多端解析</p>
+                        <p style="font-family:'Qiu';"><i class="iconfont icon-chaxun"></i>APP、PC、WAP多端解析</p> -->
                     </div>
 
                     <div class="down_dbox">
